--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "tsx clonebulk.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsx clonebulk.ts"
   },
   "author": "",
   "license": "ISC",
