--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "typescript": "^5.1.3"
-  }
+  },
+  "packageManager": "yarn@4.5.1"
 }
